aligned correctly

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 body{
-    background-color: rgba(255, 221, 0, 0.91);
+    background-color: rgb(253, 231, 92);
+}
+
+.para{
+    color: rgb(255, 145, 0);
 }
